k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: analytics-service
  labels:
    name: analytics-service
    app: analytics-service-microservice
