k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service-deployment
  namespace: analytics-service
  labels:
    app: analytics-service
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
      - name: analytics-service
        image: docker.io/nishanath/analytics-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
          readOnly: true
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /analytics-service/actuator/health
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 120
          timeoutSeconds: 15
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /analytics-service/actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
      volumes:
      - name: config-volume
        configMap:
          name: analytics-service-config
      restartPolicy: Always
