k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: analytics-service
  labels:
    app: analytics-service
spec:
  type: NodePort
  selector:
    app: analytics-service
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30084
    protocol: TCP
